waybar: fix tray alignment

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -52,6 +52,5 @@ label.critical {
 }
 
 #tray {
-    margin-right: 10px;
-    padding-bottom: 4px;
+    margin-right: 20px;
 }
